# CUBES

./: .gitignore  BUGS.md  CMakeLists.txt  Makefile  README.md  session-ses_2213.md  training_progress.txt  training_summary.txt  windows_toolchain.cmake
assets/: brain.json
docs/: README.md  TODO
include/core/: ai_agent.hpp  config.hpp  environment.hpp  experience.hpp  neural_network.hpp
include/debug/: debug_repl.hpp
include/menu/: menu.hpp
include/rendering/: renderer.hpp  sdl_utils.hpp
src/: main.cpp
src/core/: ai_agent.cpp  environment.cpp  neural_network.cpp
src/debug/: debug_repl.cpp
src/menu/: menu.cpp
src/rendering/: renderer.cpp  sdl_utils.cpp
tests/: test_neural_network.cpp
